--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -5,7 +5,7 @@
     align-items: center; */
 
     height: 30px;
-    width: 400px;
+    width: 450px;
     margin-right: 10px;
     background-color: white;
     border-radius: 20px;
